2015-12-20  Andrew Pinsi  <apinski@cavium.com>

	* config/aarch64/atomics.md
	(aarch64_atomic_<atomic_optab>_fetch<mode>_lse): Add early clobber
	to the scratch register.

2015-12-20  Sujoy Saraswati  <sujoy.saraswati@hpe.com>

	PR tree-optimization/61441
	* match.pd (f(x) -> x): Removed flag_errno_math check for RINT.

2015-12-20  Sujoy Saraswati  <sujoy.saraswati@hpe.com>

	PR tree-optimization/61441
	* fold-const.c (const_binop): Use REAL_VALUE_ISSIGNALING_NAN instead
	of REAL_VALUE_ISNAN to avoid the operation for sNaN operands.
	* simplify-rtx.c (simplify_const_binary_operation): Same.

2015-12-19  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/65337
	* tree-ssa-dce.c (bb_postorder): New static var.
	(forward_edge_to_pdom): Remove.
	(remove_dead_stmt): Instead of redirecting edges only keep an edge
	on a path to nearest live BB.
	(eliminate_unnecessary_stmts): Free bb_postorder.
	* cfganal.c (dfs_find_deadend): Add START_POINTES.
	* cfganal.h (inverted_post_order_compute): Update prototype.

2015-12-19  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/68910
	* emit-rtl.c (set_unique_reg_note) <>REG_EQUAL>: Add bypass for USEs.
	* config/sparc/sparc.md (anddi3): Enable only in 64-bit mode.
	(iordi3): Likewise.
	(xordi3): Likewise.
	(one_cmpldi2): Likewise.
	(*anddi3_sp32): Delete.
	(*and_not_di_sp32): Likewise.
	(*iordi3_sp32): Likewise.
	(*or_not_di_sp32): Likewise.
	(*xordi3_sp32): Likewise.
	(*xor_not_di_sp32): Likewise.
	(32-bit DImode logical operations splitter): Likewise.
	(*one_cmpldi2_sp32): Likewise.

2015-12-19  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/arc/arc.md (*storeqi_update): Use 'any_mem_operand' and
	fix RTL pattern to include the plus.
	(*storehi_update): Likewise.
	(*storesi_update): Likewise.
	(*storesf_update): Likewise.
	* config/arc/predicates.md (store_update_operand): Delete.

2015-12-19  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/arc/arc.md (*loadqi_update): Use new 'any_mem_operand'