@@ -7868,7 +7868,7 @@
 ;; Combine likes to form bit extractions for some tests.  Humor it.
 (define_insn "*testqi_ext_3"
   [(set (reg FLAGS_REG)
-	(compare (zero_extract:SWI48
+	(compare (zero_extract:SWI248
 		   (match_operand 0 "nonimmediate_operand" "rm")
 		   (match_operand 1 "const_int_operand" "n")
 		   (match_operand 2 "const_int_operand" "n"))
